[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "jaxkan"
version = "0.2.5"
description = "A JAX implementation of Kolmogorov-Arnold Networks"
readme = "README.md"
keywords = ["JAX", "NNX", "KANs", "Kolmogorov-Arnold", "PIKAN"]

authors = [
  { name = "Spyros Rigas", email = "rigassp@gmail.com" },
  { name = "Michalis Papachristou", email = "mixpap@phys.uoa.gr" }
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]

license = {file = "LICENSE"}

requires-python = ">=3.10"

dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "jax[cpu]>=0.4.35",
    "optax>=0.2.4",
    "flax>=0.10.2",
]


[project.urls]
Repository = "https://github.com/srigas/jaxkan"
Issues = "https://github.com/srigas/jaxkan/issues"


[project.optional-dependencies]
gpu = [
    "jax[cuda12]"
]
doc = [
    "jupyterlab",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx_design",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "nbsphinx-link",
	"pandoc",
]


[tool.setuptools.packages.find]
include = ["jaxkan*"]
